# opvz

./: .gitattribute  .gitignore  CMakeLists.txT  Debug.h  Information.h  Information.h.in  clean_log.ps1  cpp-base.code-profile  helper.h  main.cpp  total.cpp
cmake/: Information.h.in  config.cmake  export.cmake  install.cmake  log.cmake
cmake/export/: export.h.in  import.h.in
cs-client/MainProgram/: Program.cs
cs-client/P-InvokeHostLibrary/: P-InvokeHostLibrary.csproj
csharp-pinvoke/: P-InvokeHostLibrary.sln
csharp-pinvoke/MainProgram/: Program.cs
csharp-pinvoke/P-InvokeHostLibrary/: IOpvzCPPObject.cs
date/config/: tast.json
libraries/rapidjson/: CMakeLists.txt
libraries/rapidjson/example/: CMakeLists.txt
src/: CMakeLists.txt
src/base/registrar/: registrar.h  registrar.hpp
src/cs-client/: .gitignore
src/cs-client/P-InvokeHostLibrary/: IOpvzCPPObject.cs
src/server/: CMakeLists.txt
src/server/server_registrar/: CMakeLists.txt  ModuleRegistar.c
src/server/server_registrar/include/: ModuleRegistrar.h  module_registrar_export.h  module_registrar_export_or_import.h  module_registrar_import.h
sub_project/csharp-pinvoke/: .gitignore
sub_project/csharp-pinvoke/MainProgram/: MainProgram.csproj
sub_project/csharp-pinvoke/P-InvokeHostLibrary/: P-InvokeHostLibrary.csproj
test/: CMakeLists.txt  test_for_test.cpp  test_registrar.cpp
